%%{init: {"theme": "base", "themeVariables": {"fontSize": "14px"}}}%%
erDiagram
    submissions ||--o| submission_qualifications : "security reviewed"
    submissions ||--o| kings : "crowned as"
    submissions ||--o| challenges : "challenges as"
    kings ||--o{ challenges : "contested by"
    kings ||--o{ tasks : "pools for"
    challenges ||--o{ duel_resolutions : "verdict per pool"
    tasks ||--o| task_screenings : "screened once"
    submissions ||--o{ task_screenings : "king qualification"
    tasks ||--o{ task_solutions : "solved by"
    submissions ||--o{ task_solutions : "produces"
    tasks ||--o{ duel_task_solutions : "duel inputs"
    submissions ||--o{ duel_task_solutions : "produces"
    challenges ||--o{ duel_task_solutions : "scopes"
    tasks ||--o{ judgements : "judged on"
    submissions ||--o{ judgements : "king side"
    challenges ||--o{ judgements : "challenger side"

    submissions {
        text submission_id PK
        bigint block
        text hotkey
        jsonb agent_files
        int status_id "SubmissionStatus 0/1/2/3"
    }
    submission_qualifications {
        text submission_id PK "FK submissions"
        text outcome "qualified/needs_review/disqualified/error"
        text verdict "pass/warn/fail"
        int overall_score
        int security_score
        text model
        text risks
        text failures
        bool base_files_available
        text error "set = infra retry, stays UNVERIFIED"
    }
    kings {
        text king_id PK "FK submissions; latest = reigning"
        timestamptz king_from
    }
    challenges {
        text challenger_submission_id PK "FK submissions"
        text king_id FK
        int status "ChallengeStatus 0/1/2"
        timestamptz created_at
    }
    duel_resolutions {
        text challenger_submission_id PK "FK challenges"
        int pool_type PK "PoolType 1/2"
        int outcome "DuelOutcome 0/1/2"
        int challenger_wins
        int challenger_losses
        int ties
        int best_of
        int win_margin
    }
    tasks {
        text task_id PK
        int pool_type "PoolType 1/2"
        int status_id "TaskStatus 0/1/2/3"
        text king_id FK
        text problem_statement
        text repo_clone_url
        text parent_sha
        text commit_sha
        text reference_patch
        text content_fingerprint UK
    }
    task_screenings {
        text task_id PK "FK tasks"
        text king_submission_id FK
        text qualification_solution
        float king_score "normalized 0..1"
        float max_score "decision ceiling"
        text reason
        text model
        int failed_runs
        timestamptz next_retry_at
    }
    task_solutions {
        text task_id PK "FK tasks"
        text submission_id PK "FK submissions"
        text solution "unified diff"
        float duration
        text exit_reason
    }
    duel_task_solutions {
        text task_id PK "FK tasks"
        text challenger_submission_id PK "FK challenges"
        text submission_id PK "FK submissions"
        text solution "fresh unified diff"
        float duration
        text exit_reason
        jsonb usage_summary
    }
    judgements {
        text task_id PK
        text king_submission_id PK "FK submissions"
        text challenger_submission_id PK "FK challenges"
        text llm_winner
        float king_score
        float challenger_score
        text error "set = neutral fallback"
    }
    registrations {
        bigint id PK
        int uid
        text ss58_hot
        text ss58_cold
        bigint block "unique with uid"
        timestamptz block_date
    }
    task_generation_failures {
        bigint id PK
        text king_id "no FK"
        text repo_full_name
        text commit_sha
        int attempts
        text reason
    }
